log/build_2022-06-02_15-38-40/central_pc/stderr.log
  File "/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/central_pc/centralPC.py", line 59
    self.get_logger().info('pose : %f, %f, %f \n', % (pose[0], pose[1], pose[2]))
                                                   ^
SyntaxError: invalid syntax

